...
  return [
    {
      label: 'Execution price',
      value: `${formatAmount(limitPrice)} ${txInfo.sellToken.symbol} = 1 ${txInfo.buyToken.symbol}`,
    },
    {
      label: 'Expiry',
      value: expiresAt,
    },
    {
      label: 'Order ID',
      render: () => (
        <View flexDirection="row" alignItems="center" gap="$2">
          {'uid' in txInfo && (
            <>
              <Text fontSize="$4">{ellipsis(txInfo.uid, 6)}</Text>
              <CopyButton value={txInfo.uid} color={'$textSecondaryLight'} />
...
            </>
          )}
        </View>
      ),
    },
    {
      label: 'Network',
      render: () => (
        <View flexDirection="row" alignItems="center" gap="$2">
          <Logo logoUri={chain.chainLogoUri} size="$6" />
          <Text fontSize="$4">{chain.chainName}</Text>
        </View>
      ),
    },
    {
      label: 'Status',
      render: () => (
        <View flexDirection="row" alignItems="center" gap="$2">
          <Badge
            circular={false}
            themeName="badge_warning_variant1"
            textContentProps={{ fontWeight: 500 }}
...
