...
      time={time}
      fromToken={sellToken}
      toToken={buyToken}
      fromAmount={sellTokenValue}
      toAmount={buyTokenValue}
      fromLabel="Sell"
      toLabel="For at least"
    />
  )
}

