...
  return orderClassTitles[orderClass] || orderClassTitles['market']
}

function TxGroupedCardComponent({ transactions, inQueue, onPress }: TxGroupedCard) {
  const firstTxInfo = transactions[0].transaction.txInfo
  const isSwapTransfer = isSwapTransferOrderTxInfo(firstTxInfo)
  const label = isSwapTransfer ? getSettlementOrderTitle(firstTxInfo) : 'Bulk transactions'

  return (
    <Container>
      <View flexDirection="row" alignItems="center" gap="$2">
        <Theme name="logo">
          <View
...
        <Text fontSize="$4" fontWeight={600}>
          {label}
        </Text>
      </View>
      <View>
        {transactions.map((item, index) => (
          <View testID="tx-group-info" key={`${item.transaction.id}-${index}`} marginTop={12}>
            <TxInfo inQueue={inQueue} bordered tx={item.transaction} onPress={onPress} />
          </View>
        ))}
      </View>
    </Container>
  )
...
