...
export function TransactionActionsContainer() {
  const { txId } = useLocalSearchParams<{ txId: string }>()

  const { data, isFetching, isError } = useTransactionData(txId)

  const { handleScroll } = useScrollableHeader({
    children: <NavBarTitle>Actions</NavBarTitle>,
  })

  if (isError) {
    return (
      <View margin="$4">
        <Alert type="error" message="Error fetching transaction actions" />
...
