...
    <Tabs screenOptions={screenOptions}>
      <Tabs.Screen
        name="index"
        options={{
          header: () => <AssetsNavbar />,
          title: 'Home',
          tabBarButtonTestID: 'home-tab',
          tabBarButton: ({ children, ref, ...rest }) => {
            return (
              <Pressable {...rest} style={styles.tabButton}>
                {children}
              </Pressable>
            )
...
